use type exctraction + compression to shrink URL hash

--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@mui/lab": "^5.0.0-alpha.85",
     "@mui/material": "^5.2.8",
     "@types/node": "^16.11.19",
+    "@types/pako": "^2.0.0",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-plotly.js": "^2.5.0",
+    "buffer": "^6.0.3",
     "jotai": "^1.7.0",
+    "pako": "^2.0.4",
     "plotly.js": "^2.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
