--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
   "name": "kerbal-transfer-illustrator",
-  "version": "0.10.4",
+  "version": "0.10.5",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.5.0",
-    "@mui/lab": "^5.0.0-alpha.85",
-    "@mui/material": "^5.2.8",
-    "@types/node": "^16.11.19",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.86",
+    "@mui/material": "^5.8.4",
+    "@react-three/drei": "^9.13.2",
+    "@react-three/fiber": "^8.0.26",
+    "@types/node": "^18.0.0",
     "@types/pako": "^2.0.0",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-plotly.js": "^2.5.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "@types/react-plotly.js": "^2.5.1",
+    "@types/three": "^0.141.0",
     "buffer": "^6.0.3",
-    "jotai": "^1.7.0",
+    "jotai": "^1.7.2",
     "pako": "^2.0.4",
-    "plotly.js": "^2.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "plotly.js": "^2.12.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-plotly.js": "^2.5.1",
-    "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
-    "typescript": "^4.5.4"
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
