add body rotation to configs, add galileo pack

--- a/src/data/jnsq_configs.json
+++ b/src/data/jnsq_configs.json
@@ -4,12 +4,16 @@
 		"radius":"175750000",
 		"atmosphereHeight":"800000",
 		"geeASL":"27.7",
+		"rotationPeriod":"1080000",
+		"initialRotation":"0",
 		"templateName":"Sun"
 	},
 	{
 		"name":"Moho",
 		"radius":"650000",
 		"geeASL":"0.29",
+		"rotationPeriod":"2530758.15664",
+		"initialRotation":"265",
 		"semiMajorAxis":"14522400000",
 		"eccentricity":"0.2",
 		"inclination":"7",
@@ -26,6 +30,8 @@
 		"radius":"2050000",
 		"atmosphereHeight":"60000",
 		"geeASL":"1.4",
+		"rotationPeriod":"81000",
+		"initialRotation":"0",
 		"semiMajorAxis":"27131000000",
 		"eccentricity":"0.01",
 		"inclination":"2.1",
@@ -41,6 +47,7 @@
 		"name":"Gilly",
 		"radius":"30000",
 		"geeASL":"0.0075",
+		"initialRotation":"270",
 		"semiMajorAxis":"86920000",
 		"eccentricity":"0.55",
 		"inclination":"12",
@@ -53,10 +60,13 @@
 		"templateName":"Gilly"
 	},
 	{
+		"flightGlobalsIndex":"1",
 		"name":"Kerbin",
 		"radius":"1600000",
 		"atmosphereHeight":"80000",
 		"geeASL":"1",
+		"rotationPeriod":"43200",
+		"initialRotation":"0",
 		"semiMajorAxis":"37525647898.4324",
 		"eccentricity":"0.02",
 		"inclination":"0",
@@ -72,6 +82,7 @@
 		"name":"Mun",
 		"radius":"400000",
 		"geeASL":"0.145",
+		"initialRotation":"30",
 		"eccentricity":"0.005",
 		"inclination":"0.5",
 		"argOfPeriapsis":"165",
@@ -86,6 +97,7 @@
 		"name":"Minmus",
 		"radius":"160000",
 		"geeASL":"0.05",
+		"initialRotation":"240",
 		"eccentricity":"0.03",
 		"inclination":"6",
 		"argOfPeriapsis":"315",
@@ -101,6 +113,8 @@
 		"radius":"800000",
 		"atmosphereHeight":"70000",
 		"geeASL":"0.34",
+		"rotationPeriod":"50400",
+		"initialRotation":"0",
 		"semiMajorAxis":"57189100000",
 		"eccentricity":"0.051",
 		"inclination":"0.06",
@@ -116,6 +130,7 @@
 		"name":"Ike",
 		"radius":"210000",
 		"geeASL":"0.06",
+		"initialRotation":"75",
 		"semiMajorAxis":"36680000",
 		"eccentricity":"0.03",
 		"inclination":"0.2",
@@ -131,6 +146,8 @@
 		"name":"Edna",
 		"radius":"260000",
 		"geeASL":"0.08",
+		"rotationPeriod":"10800",
+		"initialRotation":"0",
 		"semiMajorAxis":"94080000000",
 		"eccentricity":"0.07",
 		"inclination":"3",
@@ -146,6 +163,7 @@
 		"name":"Dak",
 		"radius":"20000",
 		"geeASL":"0.008",
+		"initialRotation":"30",
 		"semiMajorAxis":"4770000",
 		"eccentricity":"0.01",
 		"inclination":"10",
@@ -161,6 +179,8 @@
 		"name":"Dres",
 		"radius":"360000",
 		"geeASL":"0.12",
+		"rotationPeriod":"16200",
+		"initialRotation":"0",
 		"semiMajorAxis":"112687000000",
 		"eccentricity":"0.145",
 		"inclination":"5",
@@ -177,6 +197,8 @@
 		"radius":"14000000",
 		"atmosphereHeight":"500000",
 		"geeASL":"1.04",
+		"rotationPeriod":"19800",
+		"initialRotation":"0",
 		"semiMajorAxis":"189765000000",
 		"eccentricity":"0.05",
 		"inclination":"1.304",
@@ -193,6 +215,7 @@
 		"radius":"1100000",
 		"atmosphereHeight":"75000",
 		"geeASL":"0.58",
+		"initialRotation":"240",
 		"semiMajorAxis":"87640000",
 		"eccentricity":"0.01",
 		"inclination":"0.2",
@@ -208,6 +231,7 @@
 		"name":"Vall",
 		"radius":"550000",
 		"geeASL":"0.18",
+		"initialRotation":"0",
 		"semiMajorAxis":"160230000",
 		"eccentricity":"0.03",
 		"inclination":"0.3",
@@ -224,6 +248,7 @@
 		"radius":"900000",
 		"atmosphereHeight":"85000",
 		"geeASL":"0.32",
+		"initialRotation":"165",
 		"semiMajorAxis":"292950000",
 		"eccentricity":"0.01",
 		"inclination":"0.1",
@@ -239,6 +264,7 @@
 		"name":"Bop",
 		"radius":"190000",
 		"geeASL":"0.05",
+		"initialRotation":"125",
 		"semiMajorAxis":"582970000",
 		"eccentricity":"0.235",
 		"meanAnomalyEpoch":"NaN",
@@ -251,6 +277,8 @@
 		"name":"Pol",
 		"radius":"130000",
 		"geeASL":"0.03",
+		"rotationPeriod":"18000",
+		"initialRotation":"0",
 		"semiMajorAxis":"739460000",
 		"eccentricity":"0.17085",
 		"inclination":"4.25",
@@ -267,6 +295,8 @@
 		"radius":"8000000",
 		"atmosphereHeight":"420000",
 		"geeASL":"0.94",
+		"rotationPeriod":"25200",
+		"initialRotation":"0",
 		"semiMajorAxis":"359571000000",
 		"eccentricity":"0.03",
 		"inclination":"1.7",
@@ -282,6 +312,7 @@
 		"name":"Krel",
 		"radius":"150000",
 		"geeASL":"0.03",
+		"initialRotation":"60",
 		"semiMajorAxis":"58600000",
 		"eccentricity":"0.02",
 		"inclination":"1.5",
@@ -297,6 +328,7 @@
 		"name":"Aden",
 		"radius":"300000",
 		"geeASL":"0.07",
+		"initialRotation":"240",
 		"semiMajorAxis":"107140000",
 		"eccentricity":"0.01",
 		"inclination":"0.25",
@@ -313,6 +345,7 @@
 		"radius":"670000",
 		"atmosphereHeight":"180000",
 		"geeASL":"0.15",
+		"initialRotation":"120",
 		"semiMajorAxis":"187500000",
 		"eccentricity":"0.025",
 		"inclination":"0.75",
@@ -329,6 +362,7 @@
 		"radius":"750000",
 		"atmosphereHeight":"90000",
 		"geeASL":"0.18",
+		"initialRotation":"195",
 		"semiMajorAxis":"309380000",
 		"eccentricity":"0.03",
 		"inclination":"0.5",
@@ -344,6 +378,7 @@
 		"name":"Talos",
 		"radius":"500000",
 		"geeASL":"0.11",
+		"initialRotation":"15",
 		"semiMajorAxis":"575680000",
 		"eccentricity":"0.04",
 		"inclination":"1",
@@ -360,6 +395,8 @@
 		"radius":"600000",
 		"atmosphereHeight":"75000",
 		"geeASL":"0.15",
+		"rotationPeriod":"28800",
+		"initialRotation":"0",
 		"semiMajorAxis":"471171300000",
 		"eccentricity":"0.26",
 		"inclination":"6.15",
@@ -375,6 +412,7 @@
 		"name":"Celes",
 		"radius":"200000",
 		"geeASL":"0.04",
+		"initialRotation":"190",
 		"semiMajorAxis":"31800000",
 		"eccentricity":"0.05",
 		"inclination":"10",
@@ -390,6 +428,7 @@
 		"name":"Tam",
 		"radius":"10000",
 		"geeASL":"0.0035",
+		"initialRotation":"315",
 		"semiMajorAxis":"64670000",
 		"eccentricity":"0.025",
 		"inclination":"9.5",
@@ -405,6 +444,8 @@
 		"name":"Hamek",
 		"radius":"450000",
 		"geeASL":"0.1",
+		"rotationPeriod":"14400",
+		"initialRotation":"0",
 		"semiMajorAxis":"527129000000",
 		"eccentricity":"0.1",
 		"inclination":"4",
@@ -421,6 +462,8 @@
 		"radius":"3600000",
 		"atmosphereHeight":"170000",
 		"geeASL":"1",
+		"rotationPeriod":"43200",
+		"initialRotation":"0",
 		"semiMajorAxis":"1712000000000",
 		"eccentricity":"0.35",
 		"inclination":"20",
@@ -436,6 +479,7 @@
 		"name":"Amos",
 		"radius":"320000",
 		"geeASL":"0.06",
+		"initialRotation":"165",
 		"semiMajorAxis":"55880000",
 		"eccentricity":"0.01",
 		"inclination":"0.5",
@@ -451,6 +495,7 @@
 		"name":"Enon",
 		"radius":"700000",
 		"geeASL":"0.15",
+		"initialRotation":"270",
 		"semiMajorAxis":"125980000",
 		"eccentricity":"0.015",
 		"inclination":"0.2",
@@ -466,6 +511,8 @@
 		"name":"Prax",
 		"radius":"110000",
 		"geeASL":"0.02",
+		"rotationPeriod":"21600",
+		"initialRotation":"0",
 		"semiMajorAxis":"751900000",
 		"eccentricity":"0.4",
 		"inclination":"17",
