--- a/src/data/ksrss_configs.json
+++ b/src/data/ksrss_configs.json
@@ -9,6 +9,8 @@
 		"name":"Mercury",
 		"radius":"229770",
 		"geeASL":"0.38",
+		"rotationPeriod":"1266757.92",
+		"initialRotation":"0",
 		"semiMajorAxis":"5453849467.49746",
 		"eccentricity":"0.2056187266319207",
 		"inclination":"7.01",
@@ -24,6 +26,8 @@
 		"radius":"569693",
 		"atmosphereHeight":"68000",
 		"geeASL":"0.904",
+		"rotationPeriod":"-5249199.254095",
+		"initialRotation":"0",
 		"semiMajorAxis":"10191142285.7852",
 		"eccentricity":"0.006810339650842032",
 		"inclination":"3.39458",
@@ -35,10 +39,13 @@
 		"templateName":"Duna"
 	},
 	{
+		"flightGlobalsIndex":"1",
 		"name":"Earth",
 		"radius":"600000",
 		"atmosphereHeight":"69000",
 		"stdGravParam":"3.5316000e+12",
+		"rotationPeriod":"21549.425",
+		"initialRotation":"0",
 		"semiMajorAxis":"14089118586.40445",
 		"eccentricity":"0.01609636160505683",
 		"inclination":"0",
@@ -53,6 +60,8 @@
 		"name":"Moon",
 		"radius":"163600",
 		"geeASL":"0.166",
+		"rotationPeriod":"590146.171199998",
+		"initialRotation":"98.102",
 		"semiMajorAxis":"36194051.4005186",
 		"eccentricity":"0.05328149353682574",
 		"inclination":"28.36267790798491",
@@ -67,6 +76,8 @@
 		"name":"Ryugu",
 		"radius":"435",
 		"geeASL":"0.002",
+		"rotationPeriod":"15470.9",
+		"initialRotation":"0",
 		"semiMajorAxis":"15956024156.0549",
 		"eccentricity":"0.206077710724101",
 		"inclination":"5.8837",
@@ -82,6 +93,8 @@
 		"radius":"317932",
 		"atmosphereHeight":"58000",
 		"geeASL":"0.379",
+		"rotationPeriod":"22160.6712",
+		"initialRotation":"25",
 		"semiMajorAxis":"21468233185.3434",
 		"eccentricity":"0.09326110278323557",
 		"inclination":"1.85",
@@ -96,6 +109,8 @@
 		"name":"Phobos",
 		"radius":"7250",
 		"mass":"1.072E+16",
+		"rotationPeriod":"6888.460968",
+		"initialRotation":"0",
 		"semiMajorAxis":"1766471.613703651",
 		"eccentricity":"0.01539938155583979",
 		"inclination":"1.093",
@@ -110,6 +125,8 @@
 		"name":"Deimos",
 		"radius":"5456",
 		"mass":"1.48E+15",
+		"rotationPeriod":"27280.8",
+		"initialRotation":"0",
 		"semiMajorAxis":"4418416.95512676",
 		"eccentricity":"0.0003294680798661700",
 		"inclination":"0.93",
@@ -124,6 +141,8 @@
 		"name":"Vesta",
 		"radius":"24741",
 		"geeASL":"0.025",
+		"rotationPeriod":"4807.8",
+		"initialRotation":"0",
 		"semiMajorAxis":"33278039536.9333",
 		"eccentricity":"0.0902068412255369",
 		"inclination":"5.58",
@@ -138,6 +157,8 @@
 		"name":"Ceres",
 		"radius":"44547",
 		"geeASL":"0.029",
+		"rotationPeriod":"8166.6",
+		"initialRotation":"0",
 		"semiMajorAxis":"38965790385.4938",
 		"eccentricity":"0.079363494880566",
 		"inclination":"10.62",
@@ -152,6 +173,8 @@
 		"name":"ChuryumovGerasimenko",
 		"radius":"1800.0",
 		"mass":"9.978E+12",
+		"rotationPeriod":"45940.9",
+		"initialRotation":"0",
 		"semiMajorAxis":"64752126378.6618",
 		"eccentricity":"0.6410",
 		"inclination":"7.0405",
@@ -167,6 +190,8 @@
 		"radius":"6533528",
 		"atmosphereHeight":"732000",
 		"geeASL":"2.358",
+		"rotationPeriod":"8932.5",
+		"initialRotation":"25",
 		"semiMajorAxis":"73289596784.6822",
 		"eccentricity":"0.04872660654702194",
 		"inclination":"1.31",
@@ -238,6 +263,8 @@
 		"radius":"5388585.4",
 		"atmosphereHeight":"1118000",
 		"geeASL":"1.065",
+		"rotationPeriod":"9513",
+		"initialRotation":"0",
 		"semiMajorAxis":"134190879507.7481",
 		"eccentricity":"0.05347166506749872",
 		"inclination":"2.485",
@@ -252,6 +279,8 @@
 		"name":"Mimas",
 		"radius":"18666.4155",
 		"geeASL":"0.0065",
+		"rotationPeriod":"20347.2",
+		"initialRotation":"0",
 		"semiMajorAxis":"17518297.7889",
 		"eccentricity":"0.01776275223147744",
 		"inclination":"1.574",
@@ -266,6 +295,8 @@
 		"name":"Enceladus",
 		"radius":"23742.7",
 		"geeASL":"0.0113",
+		"rotationPeriod":"29596.7088",
+		"initialRotation":"0",
 		"semiMajorAxis":"22453729.4673",
 		"eccentricity":"0.006227897999957464",
 		"inclination":"0.009",
@@ -280,6 +311,8 @@
 		"name":"Tethys",
 		"radius":"50018",
 		"geeASL":"0.015",
+		"rotationPeriod":"40776.5232",
+		"initialRotation":"0",
 		"semiMajorAxis":"27780510.6781",
 		"eccentricity":"0.001064868868083566",
 		"inclination":"1.12",
@@ -294,6 +327,8 @@
 		"name":"Dione",
 		"radius":"52872.48",
 		"geeASL":"0.0236",
+		"rotationPeriod":"59117.364",
+		"initialRotation":"0",
 		"semiMajorAxis":"35567023.1213",
 		"eccentricity":"0.001679230905502774",
 		"inclination":"0.019",
@@ -308,6 +343,8 @@
 		"name":"Rhea",
 		"radius":"71934.45",
 		"geeASL":"0.0269",
+		"rotationPeriod":"97593.3792",
+		"initialRotation":"0",
 		"semiMajorAxis":"49652726.0979",
 		"eccentricity":"0.001168269515756326",
 		"inclination":"0.345",
@@ -323,6 +360,8 @@
 		"radius":"242352.6",
 		"atmosphereHeight":"84000",
 		"geeASL":"0.14",
+		"rotationPeriod":"344412",
+		"initialRotation":"0",
 		"semiMajorAxis":"115084407.4695",
 		"eccentricity":"0.02891936561555365",
 		"inclination":"0.34854",
@@ -337,6 +376,8 @@
 		"name":"Iapetus",
 		"radius":"69174.99",
 		"geeASL":"0.0228",
+		"rotationPeriod":"1713344.4",
+		"initialRotation":"0",
 		"semiMajorAxis":"335295026.655",
 		"eccentricity":"0.02880286281969610",
 		"inclination":"15.47",
@@ -351,6 +392,8 @@
 		"name":"Halley",
 		"radius":"5775.0",
 		"mass":"2.2E+14",
+		"rotationPeriod":"190080.0",
+		"initialRotation":"0",
 		"semiMajorAxis":"268166615846.5519",
 		"eccentricity":"0.966611047747523",
 		"inclination":"159.7285829406219",
@@ -366,6 +409,8 @@
 		"radius":"2326427",
 		"atmosphereHeight":"891000",
 		"geeASL":"0.904",
+		"rotationPeriod":"15515.928",
+		"initialRotation":"0",
 		"semiMajorAxis":"269997443319.2668",
 		"eccentricity":"0.04620653158718433",
 		"inclination":"0.773",
@@ -380,6 +425,7 @@
 		"name":"Miranda",
 		"radius":"22198.15",
 		"geeASL":"0.008",
+		"initialRotation":"0",
 		"semiMajorAxis":"12232063.2543",
 		"eccentricity":"0.00118741261963413",
 		"inclination":"4.232",
@@ -394,6 +440,7 @@
 		"name":"Ariel",
 		"radius":"54520.63",
 		"geeASL":"0.027",
+		"initialRotation":"0",
 		"semiMajorAxis":"17983081.9813",
 		"eccentricity":"0.00190951361476287",
 		"inclination":"0.26",
@@ -408,6 +455,7 @@
 		"name":"Umbriel",
 		"radius":"55066.87",
 		"geeASL":"0.023",
+		"initialRotation":"0",
 		"semiMajorAxis":"25051079.3113",
 		"eccentricity":"0.0038334454580725",
 		"inclination":"0.128",
@@ -422,6 +470,7 @@
 		"name":"Titania",
 		"radius":"74298.36",
 		"geeASL":"0.0386",
+		"initialRotation":"0",
 		"semiMajorAxis":"41089911.750584197",
 		"eccentricity":"0.002486916",
 		"inclination":"0.34",
@@ -436,6 +485,7 @@
 		"name":"Oberon",
 		"radius":"71708.42",
 		"geeASL":"0.035",
+		"initialRotation":"0",
 		"semiMajorAxis":"54947761.1924",
 		"eccentricity":"0.00110558297330948",
 		"inclination":"0.058",
@@ -451,6 +501,8 @@
 		"radius":"2268318",
 		"atmosphereHeight":"688000",
 		"geeASL":"1.14",
+		"rotationPeriod":"14500.08",
+		"initialRotation":"0",
 		"semiMajorAxis":"423569017970.5911",
 		"eccentricity":"0.008090397688364061",
 		"inclination":"1.77",
@@ -465,6 +517,8 @@
 		"name":"Triton",
 		"radius":"127462.8",
 		"geeASL":"0.0794",
+		"rotationPeriod":"126943.25",
+		"initialRotation":"0",
 		"semiMajorAxis":"33411870.742198597",
 		"eccentricity":"0.0001688014359763687",
 		"inclination":"156.885",
@@ -479,6 +533,8 @@
 		"name":"Pluto",
 		"radius":"111791.23",
 		"geeASL":"0.063",
+		"rotationPeriod":"137964.168",
+		"initialRotation":"0",
 		"semiMajorAxis":"550543475614.8261",
 		"eccentricity":"0.2462772488425983",
 		"inclination":"17.14",
@@ -493,6 +549,8 @@
 		"name":"Charon",
 		"radius":"56837.45",
 		"geeASL":"0.029",
+		"rotationPeriod":"137964.17664",
+		"initialRotation":"0",
 		"semiMajorAxis":"1845563.555792425",
 		"eccentricity":"0.00005082225659448947",
 		"inclination":"0.08",
