--- a/src/data/opm_configs.json
+++ b/src/data/opm_configs.json
@@ -7,6 +7,7 @@
 		"geeASL":"1.7468465687012686",
 		"mass":"1172332800000000000",
 		"stdGravParam":"1172332800000000000",
+		"rotationPeriod":"432000",
 		"color":"rgba(254,198,20,1)",
 		"templateName":"Sun"
 	},
@@ -19,6 +20,8 @@
 		"mass":"2.5263314e+21",
 		"stdGravParam":"168609380000",
 		"soi":"9646663",
+		"rotationPeriod":"1210000",
+		"initialRotation":"190",
 		"semiMajorAxis":"5263138304",
 		"eccentricity":"0.2",
 		"inclination":"7",
@@ -40,6 +43,7 @@
 		"mass":"1.224398e+23",
 		"stdGravParam":"8171730200000",
 		"soi":"85109365",
+		"rotationPeriod":"80500",
 		"semiMajorAxis":"9832684544",
 		"eccentricity":"0.01",
 		"inclination":"2.1",
@@ -60,6 +64,8 @@
 		"mass":"124203630000000000",
 		"stdGravParam":"8289449.8",
 		"soi":"126123.27",
+		"rotationPeriod":"28255",
+		"initialRotation":"5",
 		"semiMajorAxis":"31500000",
 		"eccentricity":"0.55",
 		"inclination":"12",
@@ -81,6 +87,8 @@
 		"mass":"5.2915158e+22",
 		"stdGravParam":"3531600000000",
 		"soi":"84159286",
+		"rotationPeriod":"21549.42518309",
+		"initialRotation":"90",
 		"semiMajorAxis":"13599840256",
 		"eccentricity":"0",
 		"inclination":"0",
@@ -101,6 +109,8 @@
 		"mass":"975990660000000000000",
 		"stdGravParam":"65138398000",
 		"soi":"2429559.1",
+		"rotationPeriod":"138984.376574476",
+		"initialRotation":"230",
 		"semiMajorAxis":"12000000",
 		"eccentricity":"0",
 		"inclination":"0",
@@ -121,6 +131,8 @@
 		"mass":"26457580000000000000",
 		"stdGravParam":"1765800000",
 		"soi":"2247428.4",
+		"rotationPeriod":"40400",
+		"initialRotation":"230",
 		"semiMajorAxis":"47000000",
 		"eccentricity":"0",
 		"inclination":"6",
@@ -142,6 +154,8 @@
 		"mass":"4.515427e+21",
 		"stdGravParam":"301363210000",
 		"soi":"47921949",
+		"rotationPeriod":"65517.859375",
+		"initialRotation":"90",
 		"semiMajorAxis":"20726155264",
 		"eccentricity":"0.051",
 		"inclination":"0.06",
@@ -162,6 +176,7 @@
 		"mass":"278216150000000000000",
 		"stdGravParam":"18568369000",
 		"soi":"1049598.9",
+		"rotationPeriod":"65517.859375",
 		"semiMajorAxis":"3200000",
 		"eccentricity":"0.03",
 		"inclination":"0.2",
@@ -182,6 +197,8 @@
 		"mass":"321909370000000000000",
 		"stdGravParam":"21484489000",
 		"soi":"32832840",
+		"rotationPeriod":"34800",
+		"initialRotation":"25",
 		"semiMajorAxis":"40839348203",
 		"eccentricity":"0.145",
 		"inclination":"5",
@@ -202,6 +219,7 @@
 		"mass":"4.2332127e+24",
 		"stdGravParam":"282528000000000",
 		"soi":"2455985200",
+		"rotationPeriod":"36000",
 		"semiMajorAxis":"68773560320",
 		"eccentricity":"0.05",
 		"inclination":"1.304",
@@ -223,6 +241,8 @@
 		"mass":"2.9397311e+22",
 		"stdGravParam":"1962000000000",
 		"soi":"3723645.8",
+		"rotationPeriod":"52980.87905938",
+		"initialRotation":"90",
 		"semiMajorAxis":"27184000",
 		"eccentricity":"0",
 		"inclination":"0",
@@ -243,6 +263,7 @@
 		"mass":"3.1087655e+21",
 		"stdGravParam":"207481500000",
 		"soi":"2406401.4",
+		"rotationPeriod":"105962.088893924",
 		"semiMajorAxis":"43152000",
 		"eccentricity":"0",
 		"inclination":"0",
@@ -263,6 +284,7 @@
 		"mass":"4.2332127e+22",
 		"stdGravParam":"2825280000000",
 		"soi":"10856518",
+		"rotationPeriod":"211926.35802123",
 		"semiMajorAxis":"68500000",
 		"eccentricity":"0",
 		"inclination":"0.025",
@@ -283,6 +305,8 @@
 		"mass":"37261090000000000000",
 		"stdGravParam":"2486834900",
 		"soi":"1221060.9",
+		"rotationPeriod":"544507.428516654",
+		"initialRotation":"230",
 		"semiMajorAxis":"128500000",
 		"eccentricity":"0.235",
 		"inclination":"14.999999999999998",
@@ -303,6 +327,8 @@
 		"mass":"10813507000000000000",
 		"stdGravParam":"721702080",
 		"soi":"1042138.9",
+		"rotationPeriod":"901902.623531173",
+		"initialRotation":"25",
 		"semiMajorAxis":"179890000",
 		"eccentricity":"0.171",
 		"inclination":"4.25",
@@ -319,6 +345,8 @@
 		"radius":"5300000",
 		"atmosphereHeight":"580000.0",
 		"geeASL":"0.298",
+		"rotationPeriod":"28500",
+		"initialRotation":"0",
 		"semiMajorAxis":"125798522368",
 		"eccentricity":"0.0534",
 		"inclination":"2.02",
@@ -333,8 +361,8 @@
 	{
 		"name":"Hale",
 		"radius":"6000",
-		"maxTerrainHeight":"5918",
 		"geeASL":"0.0023",
+		"soi":"41000",
 		"semiMajorAxis":"10488231",
 		"eccentricity":"0",
 		"inclination":"1",
@@ -349,8 +377,9 @@
 	{
 		"name":"Ovok",
 		"radius":"26000",
-		"maxTerrainHeight":"14000",
 		"geeASL":"0.002",
+		"soi":"94000",
+		"initialRotation":"230",
 		"semiMajorAxis":"12169413",
 		"eccentricity":"0.01",
 		"inclination":"1.5",
@@ -363,9 +392,16 @@
 		"templateName":"Minmus"
 	},
 	{
+		"name": "Eeloo",
+		"semiMajorAxis": 19105978,
+		"eccentricity": 0.0034,
+		"inclination": 2.3,
+		"ascNodeLongitude": 55,
+		"templateName": "Eeloo"
+	},
+	{
 		"name":"Slate",
 		"radius":"540000",
-		"maxTerrainHeight":"16559",
 		"geeASL":"0.692",
 		"semiMajorAxis":"42592946",
 		"eccentricity":"0.04",
@@ -381,7 +417,6 @@
 	{
 		"name":"Tekto",
 		"radius":"280000",
-		"maxTerrainHeight":"5954",
 		"atmosphereHeight":"95000.0",
 		"geeASL":"0.2503",
 		"semiMajorAxis":"97355304",
@@ -400,6 +435,8 @@
 		"radius":"2177000",
 		"atmosphereHeight":"325000.0",
 		"geeASL":"0.257",
+		"rotationPeriod":"41000",
+		"initialRotation":"0",
 		"semiMajorAxis":"254317012787",
 		"eccentricity":"0.045214674",
 		"inclination":"0.64",
@@ -414,7 +451,6 @@
 	{
 		"name":"Polta",
 		"radius":"220000",
-		"maxTerrainHeight":"8835",
 		"geeASL":"0.19",
 		"semiMajorAxis":"11727895",
 		"eccentricity":"0.0015",
@@ -430,8 +466,8 @@
 	{
 		"name":"Priax",
 		"radius":"74000",
-		"maxTerrainHeight":"30485",
 		"geeASL":"0.063",
+		"initialRotation":"30",
 		"semiMajorAxis":"11727895",
 		"eccentricity":"0.0015",
 		"inclination":"2.5",
@@ -446,7 +482,6 @@
 	{
 		"name":"Wal",
 		"radius":"370000",
-		"maxTerrainHeight":"20650",
 		"geeASL":"0.37",
 		"semiMajorAxis":"67553668",
 		"eccentricity":"0.023",
@@ -462,8 +497,9 @@
 	{
 		"name":"Tal",
 		"radius":"22000",
-		"maxTerrainHeight":"11904",
 		"geeASL":"0.045",
+		"rotationPeriod":"36134.589375",
+		"initialRotation":"0",
 		"semiMajorAxis":"3109163",
 		"eccentricity":"0",
 		"inclination":"1.9",
@@ -480,6 +516,8 @@
 		"radius":"2145000",
 		"atmosphereHeight":"260000.0",
 		"geeASL":"0.314",
+		"rotationPeriod":"40250",
+		"initialRotation":"0",
 		"semiMajorAxis":"409355191706",
 		"eccentricity":"0.0127567",
 		"inclination":"1.27",
@@ -494,9 +532,9 @@
 	{
 		"name":"Thatmo",
 		"radius":"286000",
-		"maxTerrainHeight":"4981",
 		"atmosphereHeight":"35000.0",
 		"geeASL":"0.232",
+		"initialRotation":"0",
 		"semiMajorAxis":"32300895",
 		"eccentricity":"0.00043",
 		"inclination":"161.1",
@@ -511,8 +549,9 @@
 	{
 		"name":"Nissee",
 		"radius":"30000",
-		"maxTerrainHeight":"9113",
 		"geeASL":"0.045",
+		"rotationPeriod":"27924.8723",
+		"initialRotation":"0",
 		"semiMajorAxis":"487743514",
 		"eccentricity":"0.72",
 		"inclination":"29.56",
@@ -527,8 +566,8 @@
 	{
 		"name":"Plock",
 		"radius":"189000",
-		"maxTerrainHeight":"3383",
 		"geeASL":"0.148",
+		"rotationPeriod":"106309.606989054",
 		"semiMajorAxis":"535833706086",
 		"eccentricity":"0.26",
 		"inclination":"6.15",
@@ -543,7 +582,6 @@
 	{
 		"name":"Karen",
 		"radius":"85050",
-		"maxTerrainHeight":"4655",
 		"geeASL":"0.066",
 		"semiMajorAxis":"2457800",
 		"eccentricity":"0",
