--- a/src/data/rss_configs.json
+++ b/src/data/rss_configs.json
@@ -10,6 +10,8 @@
 		"name":"Mercury",
 		"radius":"2439700",
 		"stdGravParam":"2.2031780000000021e+13",
+		"rotationPeriod":"5067031.68",
+		"initialRotation":"0",
 		"semiMajorAxis":"57908973645.88802",
 		"eccentricity":"0.2056187266319207",
 		"inclination":"28.60252108855048",
@@ -26,6 +28,8 @@
 		"radius":"6049000",
 		"atmosphereHeight":"145000.0",
 		"stdGravParam":"3.2485859200000006e+14",
+		"rotationPeriod":"-20996797.016381",
+		"initialRotation":"0",
 		"semiMajorAxis":"108209548790.4671",
 		"eccentricity":"0.006810339650842032",
 		"inclination":"24.46397633556437",
@@ -42,6 +46,8 @@
 		"radius":"6371000",
 		"atmosphereHeight":"140000.0",
 		"stdGravParam":"3.9860043543609598e+14",
+		"rotationPeriod":"86164.098903691",
+		"initialRotation":"100.1833",
 		"semiMajorAxis":"149598261150.4425",
 		"eccentricity":"0.01609636160505683",
 		"inclination":"23.44603795469773",
@@ -57,6 +63,8 @@
 		"name":"Moon",
 		"radius":"1737100",
 		"stdGravParam":"4.9028000661637961e+12",
+		"rotationPeriod":"2360584.68479999",
+		"initialRotation":"25",
 		"semiMajorAxis":"384308437.7707066",
 		"eccentricity":"0.05328149353682574",
 		"inclination":"28.36267790798491",
@@ -73,6 +81,8 @@
 		"radius":"3375800",
 		"atmosphereHeight":"125000.0",
 		"stdGravParam":"4.282837362069909E+13",
+		"rotationPeriod":"88642.6848",
+		"initialRotation":"25",
 		"semiMajorAxis":"227949699961.9763",
 		"eccentricity":"0.09326110278323557",
 		"inclination":"24.69272426910055",
@@ -88,6 +98,8 @@
 		"name":"Phobos",
 		"radius":"7250",
 		"stdGravParam":"7.087546066894452e+5",
+		"rotationPeriod":"27553.843872",
+		"initialRotation":"0",
 		"semiMajorAxis":"9378492.209088314",
 		"eccentricity":"0.01539938155583979",
 		"inclination":"36.32433410471867",
@@ -103,6 +115,8 @@
 		"name":"Deimos",
 		"radius":"5456",
 		"stdGravParam":"9.615569648120313e+4",
+		"rotationPeriod":"109123.2",
+		"initialRotation":"0",
 		"semiMajorAxis":"23458112.01759387",
 		"eccentricity":"0.0003294680798661700",
 		"inclination":"38.2773701383231",
@@ -118,6 +132,8 @@
 		"name":"Vesta",
 		"radius":"262700",
 		"stdGravParam":"0.1728824496930000e+11",
+		"rotationPeriod":"19231.2",
+		"initialRotation":"0",
 		"semiMajorAxis":"353346223803.158",
 		"eccentricity":"0.0902068412255369",
 		"inclination":"22.7696439720361",
@@ -133,6 +149,8 @@
 		"name":"Ceres",
 		"radius":"473000",
 		"stdGravParam":"6.26325000000000e+10",
+		"rotationPeriod":"32666.4",
+		"initialRotation":"0",
 		"semiMajorAxis":"413738762313.173",
 		"eccentricity":"0.079363494880566",
 		"inclination":"27.1273394923134",
@@ -149,6 +167,8 @@
 		"radius":"69373000",
 		"atmosphereHeight":"1550000.0",
 		"stdGravParam":"1.266865349218008E+17",
+		"rotationPeriod":"35730",
+		"initialRotation":"25",
 		"semiMajorAxis":"778188938659.7554",
 		"eccentricity":"0.04872660654702194",
 		"inclination":"23.25313306947884",
@@ -225,6 +245,8 @@
 		"radius":"57216000",
 		"atmosphereHeight":"2000000.0",
 		"stdGravParam":"3.793120749865224E+16",
+		"rotationPeriod":"38052",
+		"initialRotation":"0",
 		"semiMajorAxis":"1424838758613.269",
 		"eccentricity":"0.05347166506749872",
 		"inclination":"22.56992281132335",
@@ -240,6 +262,8 @@
 		"name":"Mimas",
 		"radius":"198200",
 		"stdGravParam":"2.503524000000e+9",
+		"rotationPeriod":"81388.8",
+		"initialRotation":"0",
 		"semiMajorAxis":"186009285.9220490",
 		"eccentricity":"0.01776275223147744",
 		"inclination":"1.572",
@@ -255,6 +279,8 @@
 		"name":"Enceladus",
 		"radius":"252100",
 		"stdGravParam":"7.211454165826e+9",
+		"rotationPeriod":"118386.8352",
+		"initialRotation":"0",
 		"semiMajorAxis":"238413699.4838728",
 		"eccentricity":"0.006227897999957464",
 		"inclination":"0.009",
@@ -270,6 +296,8 @@
 		"name":"Tethys",
 		"radius":"531100",
 		"stdGravParam":"4.121107782641e+10",
+		"rotationPeriod":"163106.0928",
+		"initialRotation":"0",
 		"semiMajorAxis":"294973462.3804425",
 		"eccentricity":"0.001064868868083566",
 		"inclination":"1.091",
@@ -285,6 +313,8 @@
 		"name":"Dione",
 		"radius":"561400",
 		"stdGravParam":"7.311636648732e+10",
+		"rotationPeriod":"236469.456",
+		"initialRotation":"0",
 		"semiMajorAxis":"377650651.5017090",
 		"eccentricity":"0.001679230905502774",
 		"inclination":"0.028",
@@ -300,6 +330,8 @@
 		"name":"Rhea",
 		"radius":"763800",
 		"stdGravParam":"1.539424643535e+11",
+		"rotationPeriod":"390373.5168",
+		"initialRotation":"0",
 		"semiMajorAxis":"527212645.7071990",
 		"eccentricity":"0.001168269515756326",
 		"inclination":"0.331",
@@ -316,6 +348,8 @@
 		"radius":"2573300",
 		"atmosphereHeight":"600000.0",
 		"stdGravParam":"8.9778648e+12",
+		"rotationPeriod":"1377648",
+		"initialRotation":"0",
 		"semiMajorAxis":"1221966238.511425",
 		"eccentricity":"0.02891936561555365",
 		"inclination":"6.460492679775526",
@@ -331,6 +365,8 @@
 		"name":"Iapetus",
 		"radius":"734500",
 		"stdGravParam":"1.205120887033e+11",
+		"rotationPeriod":"6853377.6",
+		"initialRotation":"0",
 		"semiMajorAxis":"3560162593.022970",
 		"eccentricity":"0.02880286281969610",
 		"inclination":"7.489",
@@ -347,6 +383,8 @@
 		"radius":"24702000",
 		"atmosphereHeight":"1400000.0",
 		"stdGravParam":"5.793951322279009E+15",
+		"rotationPeriod":"62063.712",
+		"initialRotation":"0",
 		"semiMajorAxis":"2866832853163.975",
 		"eccentricity":"0.04620653158718433",
 		"inclination":"23.67256993343676",
@@ -362,6 +400,7 @@
 		"name":"Miranda",
 		"radius":"235700",
 		"stdGravParam":"4.319516899232100e+9",
+		"initialRotation":"0",
 		"semiMajorAxis":"129880047.634175",
 		"eccentricity":"0.00118741261963413",
 		"inclination":"78.5887546839913",
@@ -377,6 +416,7 @@
 		"name":"Ariel",
 		"radius":"578900",
 		"stdGravParam":"8.346344431770477e+10",
+		"initialRotation":"0",
 		"semiMajorAxis":"190944364.477622",
 		"eccentricity":"0.00190951361476287",
 		"inclination":"74.8989043025419",
@@ -392,6 +432,7 @@
 		"name":"Umbriel",
 		"radius":"584700",
 		"stdGravParam":"8.509338094489388e+10",
+		"initialRotation":"0",
 		"semiMajorAxis":"265992360.127656",
 		"eccentricity":"0.0038334454580725",
 		"inclination":"74.9939984108702",
@@ -407,6 +448,7 @@
 		"name":"Titania",
 		"radius":"788900",
 		"stdGravParam":"2.269437003741248e+11",
+		"initialRotation":"0",
 		"semiMajorAxis":"436292682.967703",
 		"eccentricity":"0.002486916",
 		"inclination":"75.045766393",
@@ -422,6 +464,7 @@
 		"name":"Oberon",
 		"radius":"761400",
 		"stdGravParam":"2.053234302535623e+11",
+		"initialRotation":"0",
 		"semiMajorAxis":"583435328.340603",
 		"eccentricity":"0.00110558297330948",
 		"inclination":"74.9349049752716",
@@ -438,6 +481,8 @@
 		"radius":"24085000",
 		"atmosphereHeight":"1250000.0",
 		"stdGravParam":"6.835099502439672E+15",
+		"rotationPeriod":"58000.32",
+		"initialRotation":"0",
 		"semiMajorAxis":"4497455832811.736",
 		"eccentricity":"0.008090397688364061",
 		"inclination":"22.30735942964904",
@@ -454,6 +499,8 @@
 		"radius":"1353400",
 		"atmosphereHeight":"110000.0",
 		"stdGravParam":"1.427598140725034E+12",
+		"rotationPeriod":"507773",
+		"initialRotation":"0",
 		"semiMajorAxis":"354767243.5406647",
 		"eccentricity":"0.0001688014359763687",
 		"inclination":"156.834",
@@ -470,6 +517,8 @@
 		"radius":"1187000",
 		"atmosphereHeight":"110000.0",
 		"stdGravParam":"8.696138177608748e+11",
+		"rotationPeriod":"551856.672",
+		"initialRotation":"0",
 		"semiMajorAxis":"5845670624078.223",
 		"eccentricity":"0.2462772488425983",
 		"inclination":"23.61236405752844",
@@ -485,6 +534,8 @@
 		"name":"Charon",
 		"radius":"603500",
 		"stdGravParam":"1.058799888601881e+11",
+		"rotationPeriod":"551856.70656",
+		"initialRotation":"0",
 		"semiMajorAxis":"19596193.83540397",
 		"eccentricity":"0.00005082225659448947",
 		"inclination":"0.001",
